<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail_game.DetailGameActivity"
    android:layout_marginTop="16dp"
    tools:showIn="@layout/activity_detail_game">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_rating"
            android:text="@string/rating"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:id="@+id/tvGenres"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/sample_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/sample_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/screenshots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center_vertical">

            <ImageButton
                android:id="@+id/imgPrev"
                android:src="@drawable/ic_previous"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:elevation="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/previous" />

            <ImageButton
                android:id="@+id/imgNext"
                android:src="@drawable/ic_next"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/next" />

            <ImageView
                android:id="@+id/imgSs"
                android:src="@mipmap/ic_launcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ss_image" />

            <ProgressBar
                android:id="@+id/progressBar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>