<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:background="@color/purple_500">

        <TextView
            android:id="@+id/tv_games"
            android:text="@string/games"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:paddingVertical="8dp"
            app:drawableTopCompat="@drawable/ic_games"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/white"
            app:drawableTint="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_developers"
            android:text="@string/developers"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:paddingVertical="8dp"
            app:drawableTopCompat="@drawable/ic_developers"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/white"
            app:drawableTint="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_genres"
            android:layout_marginTop="20dp"
            android:text="@string/genres"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:paddingVertical="8dp"
            app:drawableTopCompat="@drawable/ic_genres"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/white"
            app:drawableTint="@color/white"
            android:textSize="18sp"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>